feat: add 1059 error

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -60,7 +60,7 @@
     "1056": "用户已注销 无法登录",
     "1057": "手机号格式错误",
     "1058": "邮箱格式错误",
-    "1059": "SQL执行错误",
+    "1059": "数据库错误",
 
     "40001005": "分页参数无效"
   }
