feat: add panel & prisma listener package

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -1,5 +1,6 @@
 {
   "errorCode": {
+    "---": "系统错误码表",
     "999": "未知错误 请联系管理员",
     "1000": "成功",
     "1001": "参数校验错误",
@@ -63,6 +64,10 @@
     "1059": "数据库错误",
     "1060": "创建书签出错 请重试",
 
+    "----": "Prisma错误",
+    "P2020": "未找到该商品",
+
+    "-----": "又拍云错误码",
     "40001005": "分页参数无效"
   }
 }
