feat: update route

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -63,6 +63,7 @@
     "1058": "邮箱格式错误",
     "1059": "数据库错误",
     "1060": "创建书签出错 请重试",
+    "1061": "此订单不是您的订单 无法绑定到当前账户 您的订阅信息无效",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
