feat: add broswer plugin store

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -64,6 +64,14 @@
     "1059": "数据库错误",
     "1060": "创建书签出错 请重试",
     "1061": "此订单不是您的订单 无法绑定到当前账户 您的订阅信息无效",
+    "1062": "头部注释无效 您上传的插件不是一个符合规范的插件",
+    "1063": "您的上传的插件疑似没有任何内容 请换一个插件再试",
+    "1064": "没有找到该插件",
+    "1065": "插件健康检查有问题",
+    "1066": "插件健康检查通过",
+    "1067": "缓存文件写入失败",
+    "1068": "这个插件不是您上传的 您没有权限修改此插件",
+    "1069": "您的草稿数量已达上限 请删除一些草稿再试",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
