--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -72,6 +72,7 @@
     "1067": "缓存文件写入失败",
     "1068": "这个插件不是您上传的 您没有权限修改此插件",
     "1069": "您的草稿数量已达上限 请删除一些草稿再试",
+    "1070": "标签不存在",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
