chore: add panel service, fix prisma role & permission schema

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -73,6 +73,12 @@
     "1068": "这个插件不是您上传的 您没有权限修改此插件",
     "1069": "您的草稿数量已达上限 请删除一些草稿再试",
     "1070": "标签不存在",
+    "1071": "角色不存在",
+    "1072": "权限不足，需要权限: {}",
+    "1073": "已经存在同名权限 请勿重复添加",
+    "1074": "权限不存在",
+    "1075": "角色已存在",
+    "1076": "权限不足，需要角色：{}",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
