feat: finish role/permission, finish xunhupay, fix track

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -20,10 +20,10 @@
     "1015": "用户不存在",
     "1016": "未登录或登录已过期 请重新登录",
     "1017": "管道验证失败 原因：{}",
-    "1018": "管理员未启用迅虎支付 请使用别的支付方式或联系管理员",
-    "1019": "系统错误: 管理员未配置迅虎支付的APPID 请联系管理员",
-    "1020": "系统错误: 管理员未配置迅虎支付的APPSECRET 请联系管理员",
-    "1021": "系统错误: 管理员未配置迅虎支付 请联系管理员",
+    "1018": "管理员未启用该支付方式 请使用别的支付方式或联系管理员",
+    "1019": "支付方式为微信官方支付时 extraOptions.openid参数不能为空 请联系管理员",
+    "1020": "支付方式 {} 未启用 请使用其他支付方式或联系管理员",
+    "1021": "",
     "1022": "订单不存在",
     "1023": "第三方API请求错误 请联系管理员",
     "1024": "微信支付发起失败 请联系管理员",
@@ -78,7 +78,7 @@
     "1073": "已经存在同名权限 请勿重复添加",
     "1074": "权限不存在",
     "1075": "角色已存在",
-    "1076": "权限不足，需要角色：{}",
+    "1076": "权限禁止: 拥有 {} 权限的用户无法进行此操作",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
