--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -79,6 +79,8 @@
     "1074": "权限不存在",
     "1075": "角色已存在",
     "1076": "权限禁止: 拥有 {} 权限的用户无法进行此操作",
+    "1077": "没有设置密码 请将 旧密码 留空后重试",
+    "1078": "旧密码错误",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
