--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -83,6 +83,9 @@
     "1078": "旧密码错误",
     "1079": "没有找到该话题 或者您没有权限修改此话题",
     "1080": "没有找到标签Id {}",
+    "1081": "话题不存在",
+    "1082": "父评论不存在",
+    "1083": "您没有权限删除该评论",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
