feat(forum): add gpt

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -86,6 +86,7 @@
     "1081": "话题不存在",
     "1082": "父评论不存在",
     "1083": "您没有权限删除该评论",
+    "1084": "套餐不存在",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
