refactor: check apple status fix & move subscribe module

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -87,6 +87,11 @@
     "1082": "父评论不存在",
     "1083": "您没有权限删除该评论",
     "1084": "套餐不存在",
+    "1085": "套餐名称已存在 请换一个名称",
+    "1086": "套餐未上架",
+    "1087": "套餐已下架",
+    "1088": "套餐已是未上架状态 请勿重复操作",
+    "1089": "用户数据不存在",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
