feat: update subscribe & storekitMultiple

--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -92,6 +92,12 @@
     "1087": "套餐已下架",
     "1088": "套餐已是未上架状态 请勿重复操作",
     "1089": "用户数据不存在",
+    "1090": "您已存在该套餐 请勿重复购买",
+    "1091": "套餐未到期 您无需续费",
+    "1092": "没有找到该订阅",
+    "1093": "您的订阅未过期 不能删除订单信息",
+    "1094": "p8key参数无效",
+    "1095": "该p8key下的p8文件内容为空或不存在 请联系管理员",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
