--- a/resources/i18n/zh/global.json
+++ b/resources/i18n/zh/global.json
@@ -98,6 +98,8 @@
     "1093": "您的订阅未过期 不能删除订单信息",
     "1094": "p8key参数无效",
     "1095": "该p8key下的p8文件内容为空或不存在 请联系管理员",
+    "1096": "个性签名不能为空",
+    "1097": "邮箱已经被注册",
 
     "----": "Prisma错误",
     "P2020": "未找到该商品",
